vlib/v/checker/tests/match_expr_and_expected_type_error.vv
ch := `a`
match ch {
  'a' {}
  else {}
}

i := 123
match i {
  'a' {}
  else {}
}
